# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

# Standalone Cargo.toml -- this crate is outside the `native/` workspace root
# (`native/Cargo.toml` lists `exclude = ["../contrib"]`), so it cannot use
# `{ workspace = true }` inheritance. Versions are kept in sync with the rest of the
# repo by convention; the path deps anchor against the same on-disk crates.
#
# BUILD-GATE STUB: this is the inert wiring unit. The crate exists only so that a
# `--features contrib-delta` build of core compiles and links, and so the gate-verify
# script can prove the default build carries zero Delta surface. The real kernel-read
# implementation (delta_kernel, object_store, the scan/engine/dv modules, ...) lands in
# later units; here `planner::plan_delta_scan` returns a clean "not implemented" error so
# any Delta read that reaches native falls back to vanilla Spark.

[package]
name = "comet-contrib-delta"
description = "delta-kernel-rs integration for Comet (build-gate stub; native read path lands in a later unit). Linked into libcomet via core's `contrib-delta` Cargo feature flag."
version = "0.18.0"
edition = "2021"
rust-version = "1.86.0"
publish = false
license = "Apache-2.0"

[lib]
# rlib: linked INTO `libcomet` when `contrib-delta` is enabled on core. Never a cdylib
# on its own -- there's no separate Delta library to ship.
crate-type = ["rlib"]

[dependencies]
# Typed Delta proto messages live in core's proto crate (alongside IcebergScan, ...) so the
# dispatcher arm has direct access; the stub planner names `DeltaScan` / `DeltaScanCommon` from here.
datafusion-comet-proto = { path = "../../../native/proto" }
# For `ExecutionPlan` (return type), `SchemaRef` (the shim hands these in), and `DataFusionError`
# (the not-implemented error). Versions/features mirror core so the shared lockfile resolves cleanly.
datafusion = { version = "54.0.0", default-features = false, features = ["parquet"] }
